[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "wait_for"
description = "A waiting based utility with decorator and logger support"
readme = "README.rst"
license = { text = "Apache-2.0" }
authors = [
    { name = "Peter Savage", email = "psavage@redhat.com" },
]
maintainers = [
    { name = "Mike Shriver", email = "mshriver@redhat.com" },
    { name = "Ronny Pfannschmidt", email = "opensource@ronnypfannschmidt.de" },
]
keywords = ["setup", "distutils"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
    "parsedatetime>=2.5",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/RedHatQE/wait_for"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["wait_for"]

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-cov",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests/ -v}"
cov = "pytest {args:tests/ -v --cov wait_for --cov-report=xml}"

[[tool.hatch.envs.default.matrix]]
python = ["3.10", "3.11", "3.12", "3.13", "3.14"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["F", "I", "UP", "RUF"]
