[metadata]
name = wait_for
author = Peter Savage
author-email = psavage@redhat.com
summary = A waiting based utility with decorator and logger support
description-file = README.rst
license = Apache
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Utilities
keywords =
    setup
    distutils

[options]
install_requires =
    parsedatetime

[files]
packages =
    wait_for

[wheel]
universal=1
