[metadata]
name = wait_for
author = Peter Savage
author_email = psavage@redhat.com
summary = A waiting based utility with decorator and logger support
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/RedHatQE/wait_for
license = Apache
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Topic :: Utilities
keywords =
    setup
    distutils

[options]
install_requires =
    parsedatetime>=2.5

tests_require =
    pytest

python_requires=
    >=3.10

[files]
packages =
    wait_for

[wheel]
universal=1
